@@ -1,1 +1,0 @@
-sh standalone/windows/build-simple.sh
